[gd_scene load_steps=41 format=3 uid="uid://6uo15x52gvv0"]

[ext_resource type="PackedScene" uid="uid://df3ksxfcx8i6y" path="res://scenes/screens/main_hud.tscn" id="1_mf63t"]
[ext_resource type="AudioStream" uid="uid://d4fg7nnqss2uv" path="res://audio/sfx/jump.wav" id="2_c3aux"]
[ext_resource type="PackedScene" uid="uid://cggqb75a8w8r" path="res://addons/debug_menu/debug_menu.tscn" id="2_uwlpo"]
[ext_resource type="AudioStream" uid="uid://ypdhminedmjt" path="res://audio/sfx/player_shoot.wav" id="3_mhfsw"]
[ext_resource type="AudioStream" uid="uid://c87nh20kvu2t5" path="res://audio/sfx/death.wav" id="4_iqkos"]
[ext_resource type="AudioStream" uid="uid://dfxg5rshi8rj3" path="res://audio/sfx/pickup.wav" id="5_ru0ta"]
[ext_resource type="Shader" uid="uid://dc8hobl1uykrw" path="res://resources/shaders/blink.gdshader" id="6_bp27n"]
[ext_resource type="Texture2D" uid="uid://sldf11gtrdbv" path="res://images/characters/player/little_fox.png" id="7_t686d"]
[ext_resource type="Script" uid="uid://bvysvii7myjxb" path="res://source/states/player/player_state_idle.gd" id="13_o13sq"]
[ext_resource type="Script" uid="uid://cd5ms87ij6tov" path="res://source/states/player/player_state_attack.gd" id="14_lkmt6"]
[ext_resource type="Script" uid="uid://dp5haq56q3enj" path="res://source/states/player/player_state_run.gd" id="15_ln5kd"]
[ext_resource type="Script" uid="uid://cdq4td6tknmhf" path="res://source/states/player/player_state_fall.gd" id="16_g3jao"]
[ext_resource type="Script" uid="uid://5qildesdrv7d" path="res://source/states/player/player_state_jump.gd" id="17_3wf12"]
[ext_resource type="Script" uid="uid://rsh4rus0hgm6" path="res://source/states/player/player_state_stun.gd" id="18_bbui5"]
[ext_resource type="Script" uid="uid://btj053sno6oo2" path="res://source/states/player/player_state_die.gd" id="19_e5t7l"]
[ext_resource type="Script" uid="uid://befqfanmrpn1g" path="res://source/states/player/player_state_attack_air.gd" id="20_in0xa"]

[sub_resource type="Animation" id="Animation_8bm6c"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0]
}

[sub_resource type="Animation" id="Animation_unk87"]
resource_name = "attack-left"
length = 0.17
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [22, 23]
}

[sub_resource type="Animation" id="Animation_6mn8t"]
resource_name = "attack-right"
length = 0.17
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [20, 21]
}

[sub_resource type="Animation" id="Animation_ail4i"]
resource_name = "die-left"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [25]
}

[sub_resource type="Animation" id="Animation_rxgyo"]
resource_name = "die-right"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [24]
}

[sub_resource type="Animation" id="Animation_xcmxr"]
resource_name = "fall_left"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [16, 17]
}

[sub_resource type="Animation" id="Animation_sqnl6"]
resource_name = "fall_right"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [14, 15]
}

[sub_resource type="Animation" id="Animation_xaxng"]
resource_name = "idle_left"
length = 11.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6, 8, 8.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [2, 3, 0, 1]
}

[sub_resource type="Animation" id="Animation_whebk"]
resource_name = "idle_right"
length = 11.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 6, 8, 8.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_jxey7"]
resource_name = "jump_left"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [13]
}

[sub_resource type="Animation" id="Animation_xirnw"]
resource_name = "jump_right"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [12]
}

[sub_resource type="Animation" id="Animation_cione"]
resource_name = "run_right"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="Animation" id="Animation_0knhj"]
resource_name = "run-right"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_y182b"]
resource_name = "stun-left"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [19]
}

[sub_resource type="Animation" id="Animation_cxuaa"]
resource_name = "stun-right"
length = 0.1
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [18]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k6xty"]
_data = {
&"RESET": SubResource("Animation_8bm6c"),
&"attack-left": SubResource("Animation_unk87"),
&"attack-right": SubResource("Animation_6mn8t"),
&"die-left": SubResource("Animation_ail4i"),
&"die-right": SubResource("Animation_rxgyo"),
&"fall-left": SubResource("Animation_xcmxr"),
&"fall-right": SubResource("Animation_sqnl6"),
&"idle-left": SubResource("Animation_xaxng"),
&"idle-right": SubResource("Animation_whebk"),
&"jump-left": SubResource("Animation_jxey7"),
&"jump-right": SubResource("Animation_xirnw"),
&"run-left": SubResource("Animation_cione"),
&"run-right": SubResource("Animation_0knhj"),
&"stun-left": SubResource("Animation_y182b"),
&"stun-right": SubResource("Animation_cxuaa")
}

[sub_resource type="Animation" id="Animation_wucld"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:material:shader_parameter/hit_opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_wvuce"]
resource_name = "hit"
length = 0.2
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:material:shader_parameter/hit_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [1.0, 0.0]
}

[sub_resource type="Animation" id="Animation_d65ao"]
resource_name = "ivencibility"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0.364706, 0.364706, 0.364706, 0.411765), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dq7x5"]
_data = {
&"RESET": SubResource("Animation_wucld"),
&"hit": SubResource("Animation_wvuce"),
&"invencibility": SubResource("Animation_d65ao")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wt2fm"]
shader = ExtResource("6_bp27n")
shader_parameter/hit_opacity = 0.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0477f"]
size = Vector2(10, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ke6g0"]
size = Vector2(2, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bo042"]
size = Vector2(2, 8)

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 1
collision_layer = 2
wall_min_slide_angle = 0.0
metadata/_edit_group_ = true

[node name="MainHUD" parent="." node_paths=PackedStringArray("collectible", "health") instance=ExtResource("1_mf63t")]
collectible = NodePath("../Components/CollectibleComponent")
health = NodePath("../Components/HealthComponent")

[node name="DebugMenu" parent="MainHUD" instance=ExtResource("2_uwlpo")]

[node name="Sfx" type="Node2D" parent="."]

[node name="Jump" type="AudioStreamPlayer2D" parent="Sfx"]
stream = ExtResource("2_c3aux")
volume_db = -5.0
max_distance = 400.0

[node name="Attack" type="AudioStreamPlayer2D" parent="Sfx"]
stream = ExtResource("3_mhfsw")
volume_db = -5.0
max_distance = 400.0

[node name="Die" type="AudioStreamPlayer2D" parent="Sfx"]
stream = ExtResource("4_iqkos")
volume_db = -5.0
max_distance = 400.0

[node name="Pickup" type="AudioStreamPlayer2D" parent="Sfx"]
stream = ExtResource("5_ru0ta")
volume_db = -5.0
max_distance = 400.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_k6xty")
}
autoplay = "idle-right"

[node name="EffectAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_dq7x5")
}

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_wt2fm")
texture = ExtResource("7_t686d")
offset = Vector2(0, -8.5)
hframes = 10
vframes = 3

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_0477f")

[node name="Interactbox" type="Area2D" parent="."]
position = Vector2(0, -5.5)
collision_layer = 256
collision_mask = 128

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interactbox"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_ke6g0")
debug_color = Color(0.4, 1, 0.8, 0.419608)

[node name="Hurtbox" type="Area2D" parent="."]
position = Vector2(0, -5.5)
collision_layer = 4
collision_mask = 64

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_bo042")
debug_color = Color(0, 0.0745098, 0.662745, 0.419608)

[node name="Components" type="Node" parent="."]

[node name="MotionComponent" type="MotionComponent" parent="Components"]

[node name="HealthComponent" type="HealthComponent" parent="Components" node_paths=PackedStringArray("hurtbox")]
hurtbox = NodePath("../../Hurtbox")

[node name="CombatComponent" type="CombatComponent" parent="Components" node_paths=PackedStringArray("motion", "health")]
motion = NodePath("../MotionComponent")
health = NodePath("../HealthComponent")

[node name="CollectibleComponent" type="CollectibleComponent" parent="Components" node_paths=PackedStringArray("sequence_timer", "pickup_sfx", "effect", "state_machine", "player_state_die", "interactbox")]
sequence_timer = NodePath("SequenceTimer")
pickup_sfx = NodePath("../../Sfx/Pickup")
effect = NodePath("../../EffectAnimationPlayer")
state_machine = NodePath("../../StateMachine")
player_state_die = NodePath("../../StateMachine/PlayerStateDie")
interactbox = NodePath("../../Interactbox")

[node name="SequenceTimer" type="Timer" parent="Components/CollectibleComponent"]
one_shot = true

[node name="StateMachine" type="StateMachine" parent="." node_paths=PackedStringArray("initial_state")]
initial_state = NodePath("PlayerStateIdle")

[node name="PlayerStateIdle" type="State" parent="StateMachine" node_paths=PackedStringArray("character_body", "animation_player", "state_machine", "motion", "jump_state", "fall_state", "run_state", "attack_state")]
script = ExtResource("13_o13sq")
character_body = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")
state_machine = NodePath("..")
motion = NodePath("../../Components/MotionComponent")
jump_state = NodePath("../PlayerStateJump")
fall_state = NodePath("../PlayerStateFall")
run_state = NodePath("../PlayerStateRun")
attack_state = NodePath("../PlayerStateAttack")

[node name="PlayerStateAttack" type="State" parent="StateMachine" node_paths=PackedStringArray("character_body", "animation_player", "state_machine", "attack_sfx", "motion", "combat", "idle_state")]
script = ExtResource("14_lkmt6")
character_body = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")
state_machine = NodePath("..")
attack_sfx = NodePath("../../Sfx/Attack")
motion = NodePath("../../Components/MotionComponent")
combat = NodePath("../../Components/CombatComponent")
idle_state = NodePath("../PlayerStateIdle")

[node name="PlayerStateAttackAir" type="State" parent="StateMachine" node_paths=PackedStringArray("character_body", "animation_player", "state_machine", "attack_sfx", "motion", "combat", "idle_state", "fall_state")]
script = ExtResource("20_in0xa")
character_body = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")
state_machine = NodePath("..")
attack_sfx = NodePath("../../Sfx/Attack")
motion = NodePath("../../Components/MotionComponent")
combat = NodePath("../../Components/CombatComponent")
idle_state = NodePath("../PlayerStateIdle")
fall_state = NodePath("../PlayerStateFall")

[node name="PlayerStateRun" type="State" parent="StateMachine" node_paths=PackedStringArray("character_body", "animation_player", "state_machine", "motion", "jump_state", "fall_state", "idle_state", "attack_state")]
script = ExtResource("15_ln5kd")
character_body = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")
state_machine = NodePath("..")
motion = NodePath("../../Components/MotionComponent")
jump_state = NodePath("../PlayerStateJump")
fall_state = NodePath("../PlayerStateFall")
idle_state = NodePath("../PlayerStateIdle")
attack_state = NodePath("../PlayerStateAttack")

[node name="PlayerStateFall" type="State" parent="StateMachine" node_paths=PackedStringArray("character_body", "animation_player", "state_machine", "ray_casts_group", "coyote_timer", "motion", "jump_state", "attack_air_state", "run_state", "idle_state")]
script = ExtResource("16_g3jao")
character_body = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")
state_machine = NodePath("..")
ray_casts_group = NodePath("../../RayCasts")
coyote_timer = NodePath("CoyoteTimer")
motion = NodePath("../../Components/MotionComponent")
jump_state = NodePath("../PlayerStateJump")
attack_air_state = NodePath("../PlayerStateAttackAir")
run_state = NodePath("../PlayerStateRun")
idle_state = NodePath("../PlayerStateIdle")

[node name="CoyoteTimer" type="Timer" parent="StateMachine/PlayerStateFall"]
one_shot = true

[node name="PlayerStateJump" type="State" parent="StateMachine" node_paths=PackedStringArray("character_body", "animation_player", "state_machine", "jump_sfx", "motion", "fall_state", "attack_air_state", "run_state", "idle_state")]
script = ExtResource("17_3wf12")
character_body = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")
state_machine = NodePath("..")
jump_sfx = NodePath("../../Sfx/Jump")
motion = NodePath("../../Components/MotionComponent")
fall_state = NodePath("../PlayerStateFall")
attack_air_state = NodePath("../PlayerStateAttackAir")
run_state = NodePath("../PlayerStateRun")
idle_state = NodePath("../PlayerStateIdle")

[node name="JumpTimer" type="Timer" parent="StateMachine/PlayerStateJump"]
one_shot = true

[node name="PlayerStateStun" type="State" parent="StateMachine" node_paths=PackedStringArray("character_body", "animation_player", "effect_animation_player", "state_machine", "stun_timer", "hurtbox", "invincibility_timer", "motion", "idle_state")]
script = ExtResource("18_bbui5")
invincibility_duration = 1.0
knockback_distance = Vector2(12, -20)
character_body = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")
effect_animation_player = NodePath("../../EffectAnimationPlayer")
state_machine = NodePath("..")
stun_timer = NodePath("StunTimer")
hurtbox = NodePath("../../Hurtbox")
invincibility_timer = NodePath("InvencibilityTimer")
motion = NodePath("../../Components/MotionComponent")
idle_state = NodePath("../PlayerStateIdle")

[node name="StunTimer" type="Timer" parent="StateMachine/PlayerStateStun"]
wait_time = 0.5
one_shot = true

[node name="InvencibilityTimer" type="Timer" parent="StateMachine/PlayerStateStun"]
one_shot = true

[node name="PlayerStateDie" type="State" parent="StateMachine" node_paths=PackedStringArray("character_body", "animation_player", "state_machine", "die_sfx", "hurtbox_collision", "collectible_collision", "health", "motion", "collectible")]
script = ExtResource("19_e5t7l")
character_body = NodePath("../..")
animation_player = NodePath("../../AnimationPlayer")
state_machine = NodePath("..")
die_sfx = NodePath("../../Sfx/Die")
hurtbox_collision = NodePath("../../Hurtbox/CollisionShape2D")
collectible_collision = NodePath("../../Interactbox/CollisionShape2D")
health = NodePath("../../Components/HealthComponent")
motion = NodePath("../../Components/MotionComponent")
collectible = NodePath("../../Components/CollectibleComponent")

[node name="Camera2D" type="Camera2D" parent="."]
position_smoothing_enabled = true
position_smoothing_speed = 10.0
drag_horizontal_enabled = true
drag_left_margin = 0.05
drag_right_margin = 0.0
editor_draw_drag_margin = true

[node name="RayCasts" type="Node2D" parent="."]

[node name="JumpRayCastCenter" type="RayCast2D" parent="RayCasts"]
target_position = Vector2(0, 10)

[node name="JumpRayCastrRight" type="RayCast2D" parent="RayCasts"]
position = Vector2(4, 0)
target_position = Vector2(0, 10)

[node name="JumpRayCastLeft" type="RayCast2D" parent="RayCasts"]
position = Vector2(-4, 0)
target_position = Vector2(0, 10)
